Media Viewer: Fix broken UI with long title (#1231)

--- a/src/components/mediaViewer/MediaViewer.scss
+++ b/src/components/mediaViewer/MediaViewer.scss
@@ -67,9 +67,11 @@
     padding: 0 1.25rem;
     position: relative;
     z-index: var(--z-media-viewer-head);
+    min-width: 0;
 
     & > .Transition {
       width: 100%;
+      min-width: 0;
     }
 
     @media (max-width: 600px) {
